vlib/v/checker/tests/type_alias_decl_private_err.vv
import cli

fn my_sort(a voidptr, b voidptr) int {
	return 1
}

fn hello(func FnSortCB) {
}

fn main() {
	_ := cli.Defaults(true)
	hello(my_sort)
}
